[gd_scene load_steps=3 format=3 uid="uid://progress_viewer"]

[ext_resource type="Script" path="res://scripts/ProgressViewer.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.8, 1)

[node name="ProgressViewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "üìä PROGRESO DEL JUEGO"
horizontal_alignment = 1

[node name="Space1" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Cargando progreso..."
horizontal_alignment = 1

[node name="Space2" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="FilePathLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Archivo: user://progress.txt"
horizontal_alignment = 1

[node name="Space3" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="UnlockAllButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üîì Desbloquear Todos"

[node name="ResetButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üîÑ Reiniciar Progreso"

[node name="Space4" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚¨ÖÔ∏è Volver al Men√∫"

[connection signal="pressed" from="Panel/VBoxContainer/ButtonsContainer/UnlockAllButton" to="." method="_on_unlock_all_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonsContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
